--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-architect
 author: the only alanz
 email: my-email@domain.com
-title: Alan (Bangyan) Zhang
+title: Alan B. Zhang
