--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-architect
+theme: jekyll-theme-minimal
 author: the only alanz
 email: my-email@domain.com
 title: Alan B. Zhang
