--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
-theme: architect
 author: the only alanz
 email: my-email@domain.com
 title: Alan B. Zhang
+remote_theme: pages-themes/architect@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
