--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 author: the only alanz
 email: my-email@domain.com
 title: Alan B. Zhang
-theme: jekyll-theme-minimal
+theme: jekyll-theme-architect
 categories: [blogging]
