--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 author: the only alanz
 email: my-email@domain.com
 title: Alan B. Zhang
-#theme: jekyll-theme-architect
-theme: minima
+theme: jekyll-theme-architect
+#theme: minima
